replicar tablero evaluacion en dashboard y control

--- a/src/app/pages/dashboards/project-control/project-control.component.html
+++ b/src/app/pages/dashboards/project-control/project-control.component.html
@@ -15,6 +15,7 @@
                 </div>
                 <!--<p class="text-muted flex-grow-1 mb-xl-0">Use <code>card-header-pills</code> class to create header justify tab.</p>-->
                 <div class="flex-shrink-0">
+                    <button type="button" class="btn btn-primary btn-label right waves-effect waves-light" (click)="goDashboard()"><i class="ri-arrow-right-line label-icon align-middle fs-16"></i> Dashboard</button>
                 </div>
             </div><!-- end card header -->
             <div class="card-body">
