ajuste ancho de xaxis graficas

--- a/src/app/pages/dashboards/project-dashboard/project-resumen/project-resumen.component.html
+++ b/src/app/pages/dashboards/project-dashboard/project-resumen/project-resumen.component.html
@@ -429,7 +429,7 @@
                                                 <apx-chart [series]="getSeries(criticidad, basicBarChartPermisos)" [colors]="basicBarChartPermisos.colors"
                                                 [chart]="getChart(criticidad, basicBarChartPermisos.chart)" [dataLabels]="basicBarChartPermisos.dataLabels"
                                                     [plotOptions]="basicBarChartPermisos.plotOptions" dir="ltr"
-                                                    [xaxis]="basicBarChartPermisos.xaxis" [stroke]="basicBarChartPermisos.stroke"
+                                                    [xaxis]="basicBarChartPermisos.xaxis" [yaxis]="basicBarChartPermisos.yaxis" [stroke]="basicBarChartPermisos.stroke"
                                                     [fill]="basicBarChartPermisos.fill" [title]="basicBarChartPermisos.title"
                                                     [tooltip]="basicBarChartPermisos.tooltip" [legend]="basicBarChartPermisos.legend"></apx-chart>
 
@@ -453,7 +453,7 @@
                                                 <apx-chart [series]="getSeries(criticidad, basicBarChartReportes)" [colors]="basicBarChartReportes.colors"
                                                 [chart]="getChart(criticidad, basicBarChartReportes.chart)" [dataLabels]="basicBarChartReportes.dataLabels"
                                                 [plotOptions]="basicBarChartReportes.plotOptions" dir="ltr" 
-                                                [xaxis]="basicBarChartReportes.xaxis" [stroke]="basicBarChartReportes.stroke"
+                                                [xaxis]="basicBarChartReportes.xaxis" [yaxis]="basicBarChartReportes.yaxis" [stroke]="basicBarChartReportes.stroke"
                                                 [fill]="basicBarChartReportes.fill" [title]="basicBarChartReportes.title"
                                                 [tooltip]="basicBarChartReportes.tooltip" [legend]="basicBarChartReportes.legend"></apx-chart>
 
@@ -478,7 +478,7 @@
                                                 <apx-chart [series]="getSeries(criticidad, basicBarChartMonitoreos)" [colors]="basicBarChartMonitoreos.colors"
                                                 [chart]="getChart(criticidad, basicBarChartMonitoreos.chart)" [dataLabels]="basicBarChartMonitoreos.dataLabels"
                                                 [plotOptions]="basicBarChartMonitoreos.plotOptions" dir="ltr" 
-                                                [xaxis]="basicBarChartMonitoreos.xaxis" [stroke]="basicBarChartMonitoreos.stroke"
+                                                [xaxis]="basicBarChartMonitoreos.xaxis" [yaxis]="basicBarChartMonitoreos.yaxis" [stroke]="basicBarChartMonitoreos.stroke"
                                                 [fill]="basicBarChartMonitoreos.fill" [title]="basicBarChartMonitoreos.title"
                                                 [tooltip]="basicBarChartMonitoreos.tooltip" [legend]="basicBarChartMonitoreos.legend"></apx-chart>
 
