--- a/src/app/pages/projects/identification/identification.component.html
+++ b/src/app/pages/projects/identification/identification.component.html
@@ -1699,7 +1699,7 @@
                                                 <apx-chart [series]="getSeries(criticidad, basicBarChartGeneral)" [colors]="basicBarChartGeneral.colors"
                                                     [chart]="getChart(criticidad, basicBarChartGeneral.chart)" [dataLabels]="basicBarChartGeneral.dataLabels"
                                                     [plotOptions]="basicBarChartGeneral.plotOptions" dir="ltr"
-                                                    [xaxis]="basicBarChartGeneral.xaxis" [stroke]="basicBarChartGeneral.stroke"
+                                                    [xaxis]="basicBarChartGeneral.xaxis" [yaxis]="basicBarChartGeneral.yaxis" [stroke]="basicBarChartGeneral.stroke"
                                                     [fill]="basicBarChartGeneral.fill" [title]="basicBarChartGeneral.title"
                                                     [tooltip]="basicBarChartGeneral.tooltip" [legend]="basicBarChartGeneral.legend"></apx-chart>
                                             </div>
@@ -1719,7 +1719,7 @@
                                                 <apx-chart [series]="getSeries(criticidad, basicBarChartPermisos)" [colors]="basicBarChartPermisos.colors"
                                                 [chart]="getChart(criticidad, basicBarChartPermisos.chart)" [dataLabels]="basicBarChartPermisos.dataLabels"
                                                     [plotOptions]="basicBarChartPermisos.plotOptions" dir="ltr"
-                                                    [xaxis]="basicBarChartPermisos.xaxis" [stroke]="basicBarChartPermisos.stroke"
+                                                    [xaxis]="basicBarChartPermisos.xaxis" [yaxis]="basicBarChartPermisos.yaxis" [stroke]="basicBarChartPermisos.stroke"
                                                     [fill]="basicBarChartPermisos.fill" [title]="basicBarChartPermisos.title"
                                                     [tooltip]="basicBarChartPermisos.tooltip" [legend]="basicBarChartPermisos.legend"></apx-chart>
                                             
@@ -1736,7 +1736,7 @@
                                                     <apx-chart [series]="getSeries(criticidad, basicBarChartReportes)" [colors]="basicBarChartReportes.colors"
                                                         [chart]="getChart(criticidad, basicBarChartReportes.chart)" [dataLabels]="basicBarChartReportes.dataLabels"
                                                         [plotOptions]="basicBarChartReportes.plotOptions" dir="ltr" 
-                                                        [xaxis]="basicBarChartReportes.xaxis" [stroke]="basicBarChartReportes.stroke"
+                                                        [xaxis]="basicBarChartReportes.xaxis" [yaxis]="basicBarChartReportes.yaxis" [stroke]="basicBarChartReportes.stroke"
                                                         [fill]="basicBarChartReportes.fill" [title]="basicBarChartReportes.title"
                                                         [tooltip]="basicBarChartReportes.tooltip" [legend]="basicBarChartReportes.legend"></apx-chart>
                                                 
@@ -1757,7 +1757,7 @@
                                                 <apx-chart [series]="getSeries(criticidad, basicBarChartMonitoreos)" [colors]="basicBarChartMonitoreos.colors"
                                                     [chart]="getChart(criticidad, basicBarChartMonitoreos.chart)" [dataLabels]="basicBarChartMonitoreos.dataLabels"
                                                     [plotOptions]="basicBarChartMonitoreos.plotOptions" dir="ltr" 
-                                                    [xaxis]="basicBarChartMonitoreos.xaxis" [stroke]="basicBarChartMonitoreos.stroke"
+                                                    [xaxis]="basicBarChartMonitoreos.xaxis" [yaxis]="basicBarChartMonitoreos.yaxis" [stroke]="basicBarChartMonitoreos.stroke"
                                                     [fill]="basicBarChartMonitoreos.fill" [title]="basicBarChartMonitoreos.title"
                                                     [tooltip]="basicBarChartMonitoreos.tooltip" [legend]="basicBarChartMonitoreos.legend"></apx-chart>
                                             
@@ -1774,7 +1774,7 @@
                                                     <apx-chart [series]="getSeries(criticidad, basicBarChartOtros)" [colors]="basicBarChartOtros.colors"
                                                         [chart]="getChart(criticidad, basicBarChartOtros.chart)" [dataLabels]="basicBarChartOtros.dataLabels"
                                                         [plotOptions]="basicBarChartOtros.plotOptions" dir="ltr"
-                                                        [xaxis]="basicBarChartOtros.xaxis"  [stroke]="basicBarChartOtros.stroke"
+                                                        [xaxis]="basicBarChartOtros.xaxis" [yaxis]="basicBarChartOtros.yaxis" [stroke]="basicBarChartOtros.stroke"
                                                         [fill]="basicBarChartOtros.fill" [title]="basicBarChartOtros.title"
                                                         [tooltip]="basicBarChartOtros.tooltip" [legend]="basicBarChartOtros.legend"></apx-chart>
                                                 
@@ -1855,7 +1855,7 @@
                                                 <apx-chart [series]="getSeries(criticidad, basicBarChartGeneralInstallation)" [colors]="basicBarChartGeneralInstallation.colors"
                                                     [chart]="getChart(criticidad, basicBarChartGeneralInstallation.chart)" [dataLabels]="basicBarChartGeneralInstallation.dataLabels"
                                                     [plotOptions]="basicBarChartGeneralInstallation.plotOptions" dir="ltr"
-                                                    [xaxis]="basicBarChartGeneralInstallation.xaxis" [stroke]="basicBarChartGeneralInstallation.stroke"
+                                                    [xaxis]="basicBarChartGeneralInstallation.xaxis" [yaxis]="basicBarChartGeneralInstallation.yaxis" [stroke]="basicBarChartGeneralInstallation.stroke"
                                                     [fill]="basicBarChartGeneralInstallation.fill" [title]="basicBarChartGeneralInstallation.title"
                                                     [tooltip]="basicBarChartGeneralInstallation.tooltip" [legend]="basicBarChartGeneralInstallation.legend"></apx-chart>
                                             </div>
@@ -1875,7 +1875,7 @@
                                                 <apx-chart [series]="getSeries(criticidad, basicBarChartPermisosInstallations)" [colors]="basicBarChartPermisosInstallations.colors"
                                                     [chart]="getChart(criticidad, basicBarChartPermisosInstallations.chart)" [dataLabels]="basicBarChartPermisosInstallations.dataLabels"
                                                     [plotOptions]="basicBarChartPermisosInstallations.plotOptions" dir="ltr" 
-                                                    [xaxis]="basicBarChartPermisosInstallations.xaxis" [stroke]="basicBarChartPermisosInstallations.stroke"
+                                                    [xaxis]="basicBarChartPermisosInstallations.xaxis" [yaxis]="basicBarChartPermisosInstallations.yaxis" [stroke]="basicBarChartPermisosInstallations.stroke"
                                                     [fill]="basicBarChartPermisosInstallations.fill" [title]="basicBarChartPermisosInstallations.title"
                                                     [tooltip]="basicBarChartPermisosInstallations.tooltip" [legend]="basicBarChartPermisosInstallations.legend"></apx-chart>
                                             
@@ -1892,7 +1892,7 @@
                                                     <apx-chart [series]="getSeries(criticidad, basicBarChartReportesInstallations)" [colors]="basicBarChartReportesInstallations.colors"
                                                         [chart]="getChart(criticidad, basicBarChartReportesInstallations.chart)" [dataLabels]="basicBarChartReportesInstallations.dataLabels"
                                                         [plotOptions]="basicBarChartReportesInstallations.plotOptions" dir="ltr" 
-                                                        [xaxis]="basicBarChartReportesInstallations.xaxis" [stroke]="basicBarChartReportesInstallations.stroke"
+                                                        [xaxis]="basicBarChartReportesInstallations.xaxis" [yaxis]="basicBarChartReportesInstallations.yaxis" [stroke]="basicBarChartReportesInstallations.stroke"
                                                         [fill]="basicBarChartReportesInstallations.fill" [title]="basicBarChartReportesInstallations.title"
                                                         [tooltip]="basicBarChartReportesInstallations.tooltip" [legend]="basicBarChartReportesInstallations.legend"></apx-chart>
                                                 
@@ -1913,7 +1913,7 @@
                                                 <apx-chart [series]="getSeries(criticidad, basicBarChartMonitoreosInstallations)" [colors]="basicBarChartMonitoreosInstallations.colors"
                                                     [chart]="getChart(criticidad, basicBarChartMonitoreosInstallations.chart)" [dataLabels]="basicBarChartMonitoreosInstallations.dataLabels"
                                                     [plotOptions]="basicBarChartMonitoreosInstallations.plotOptions" dir="ltr" 
-                                                    [xaxis]="basicBarChartMonitoreosInstallations.xaxis" [stroke]="basicBarChartMonitoreosInstallations.stroke"
+                                                    [xaxis]="basicBarChartMonitoreosInstallations.xaxis" [yaxis]="basicBarChartMonitoreosInstallations.yaxis" [stroke]="basicBarChartMonitoreosInstallations.stroke"
                                                     [fill]="basicBarChartMonitoreosInstallations.fill" [title]="basicBarChartMonitoreosInstallations.title"
                                                     [tooltip]="basicBarChartMonitoreosInstallations.tooltip" [legend]="basicBarChartMonitoreosInstallations.legend"></apx-chart>
                                             
@@ -1930,7 +1930,7 @@
                                                     <apx-chart [series]="getSeries(criticidad, basicBarChartOtrosInstallations)" [colors]="basicBarChartOtrosInstallations.colors"
                                                         [chart]="getChart(criticidad, basicBarChartOtrosInstallations.chart)" [dataLabels]="basicBarChartOtrosInstallations.dataLabels"
                                                         [plotOptions]="basicBarChartOtrosInstallations.plotOptions" dir="ltr" 
-                                                        [xaxis]="basicBarChartOtrosInstallations.xaxis" [stroke]="basicBarChartOtrosInstallations.stroke"
+                                                        [xaxis]="basicBarChartOtrosInstallations.xaxis" [yaxis]="basicBarChartOtrosInstallations.yaxis" [stroke]="basicBarChartOtrosInstallations.stroke"
                                                         [fill]="basicBarChartOtrosInstallations.fill" [title]="basicBarChartOtrosInstallations.title"
                                                         [tooltip]="basicBarChartOtrosInstallations.tooltip" [legend]="basicBarChartOtrosInstallations.legend"></apx-chart>
                                                 
@@ -2243,7 +2243,7 @@
                                 <apx-chart [series]="getSeries(criticidad_cuerpo, basicBarChartGeneralCuerpos)" [colors]="basicBarChartGeneralCuerpos.colors"
                                     [chart]="getChart(criticidad, basicBarChartGeneralCuerpos.chart)" [dataLabels]="basicBarChartGeneralCuerpos.dataLabels"
                                     [plotOptions]="basicBarChartGeneralCuerpos.plotOptions" dir="ltr"
-                                    [xaxis]="basicBarChartGeneralCuerpos.xaxis" [stroke]="basicBarChartGeneralCuerpos.stroke"
+                                    [xaxis]="basicBarChartGeneralCuerpos.xaxis" [yaxis]="basicBarChartGeneralCuerpos.yaxis" [stroke]="basicBarChartGeneralCuerpos.stroke"
                                     [fill]="basicBarChartGeneralCuerpos.fill" [title]="basicBarChartGeneralCuerpos.title"
                                     [tooltip]="basicBarChartGeneralCuerpos.tooltip" [legend]="basicBarChartGeneralCuerpos.legend"></apx-chart>
                             
@@ -2276,7 +2276,7 @@
                                 <apx-chart [series]="getSeries(criticidad_cuerpo, basicBarChartGeneralCuerposInstallation)" [colors]="basicBarChartGeneralCuerposInstallation.colors"
                                     [chart]="getChart(criticidad, basicBarChartGeneralCuerposInstallation.chart)" [dataLabels]="basicBarChartGeneralCuerposInstallation.dataLabels"
                                     [plotOptions]="basicBarChartGeneralCuerposInstallation.plotOptions" dir="ltr"
-                                    [xaxis]="basicBarChartGeneralCuerposInstallation.xaxis" [stroke]="basicBarChartGeneralCuerposInstallation.stroke"
+                                    [xaxis]="basicBarChartGeneralCuerposInstallation.xaxis" [yaxis]="basicBarChartGeneralCuerposInstallation.yaxis" [stroke]="basicBarChartGeneralCuerposInstallation.stroke"
                                     [fill]="basicBarChartGeneralCuerposInstallation.fill" [title]="basicBarChartGeneralCuerposInstallation.title"
                                     [tooltip]="basicBarChartGeneralCuerposInstallation.tooltip" [legend]="basicBarChartGeneralCuerposInstallation.legend"></apx-chart>
                             
