--- a/src/app/pages/projects/create/evaluation/follow/follow.component.scss
+++ b/src/app/pages/projects/create/evaluation/follow/follow.component.scss
@@ -33,3 +33,8 @@
 .mdc-data-table__header-row{
     background: #E9EbEc !important;
 }*/
+
+.text-bg-no-evaluado{
+    color: #fff !important;
+    background-color: #878A99;
+}
