--- a/src/app/pages/projects/create/evaluation/task/task.component.scss
+++ b/src/app/pages/projects/create/evaluation/task/task.component.scss
@@ -29,3 +29,7 @@
 .mdc-data-table__header-row{
     background: #E9EbEc !important;
 }*/
+.text-bg-no-evaluado{
+    color: #fff !important;
+    background-color: #878A99;
+}
