nuevos estados cumplimiento

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -29,3 +29,8 @@
   ::ng-deep body::-webkit-scrollbar-track:active {
     background: #d4d4d4 !important;
   }
+
+  ::ng-deep .badge { 
+  max-width: 170px;
+  white-space: break-spaces;
+  }
