formatear porcentajes a numeros grafica pie identificacion

--- a/src/app/pages/projects/identification/identification.component.html
+++ b/src/app/pages/projects/identification/identification.component.html
@@ -1537,9 +1537,8 @@
                                         </div>
                 
                                         <apx-chart [series]="simpleDonutChartCuerpos.series" [chart]="simpleDonutChartCuerpos.chart"
-                                        [labels]="simpleDonutChartCuerpos.labels" [responsive]="simpleDonutChartCuerpos.responsive"
-                                        [legend]="simpleDonutChartCuerpos.legend" [dataLabels]="simpleDonutChartCuerpos.dataLabels"
-                                        [colors]="simpleDonutChartCuerpos.colors" dir="ltr" *ngIf="getDataExist(simpleDonutChartCuerpos.series)"></apx-chart>
+                                        [labels]="simpleDonutChartCuerpos.labels" [dataLabels]="simpleDonutChartCuerpos.dataLabels" [responsive]="simpleDonutChartCuerpos.responsive"
+                                        [legend]="simpleDonutChartCuerpos.legend" [colors]="simpleDonutChartCuerpos.colors" dir="ltr" *ngIf="getDataExist(simpleDonutChartCuerpos.series)"></apx-chart>
                                             </div>
                                         </div>
                                     </div>
